[metadata]
name = subimage-stitcher
version = 1.0
description = Stitch a zoomed-in image into a zoomed-out image of the same scene, to boost resolution of that portion.
long_description = file: README.md
long_description_content_type = text/markdown
author = Splendide Imaginarius
keywords = subimage, stitching
platforms = any
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
project_urls =
	Source = https://github.com/Splendide-Imaginarius/subimage-stitcher
    Bug Tracker = https://github.com/Splendide-Imaginarius/subimage-stitcher/issues

[options]
packages = find:
install_requires =
    opencv-python>=4.0.1
py_modules =
    subimage_stitcher
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    subimage-stitcher = subimage_stitcher:main

[options.packages.find]
exclude = tests
